--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,10 @@
 
 @import url('https://fonts.googleapis.com/css?family=Inter:400,500,600,700,800,900&display=swap');
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Inter', sans-serif;
   font-weight: 500;
