--- a/src/css/main.css
+++ b/src/css/main.css
@@ -42,6 +42,18 @@ textarea {
 a {
   cursor: pointer;
 }
+/* 
+<div class="react-select-container">
+  <div class="react-select__control">
+    <div class="react-select__value-container">...</div>
+    <div class="react-select__indicators">...</div>
+  </div>
+  <div class="react-select__menu">
+    <div class="react-select__menu-list">
+      <div class="react-select__option">...</div>
+    </div>
+  </div>
+</div> */
 
 /* shake */
 .animated {
