add send feature

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -43,6 +43,19 @@ textarea {
 a {
   cursor: pointer;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 /* 
 <div class="react-select-container">
   <div class="react-select__control">
